# xclip

./: .gitignore  INSTALL.md  NOTICES.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: check.yml  release.yml
src/: App.svelte
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  paths.rs
src-tauri/src/commands/: auto_track.rs  clipboard.rs  download.rs  export.rs  mod.rs  probe.rs  yt_dlp_update.rs
src-tauri/src/focus/: mod.rs
src/bindings/: tauri.ts
src/lib/: ExportPanel.svelte  FocusOverlay.svelte  FocusToolsPanel.svelte  Player.svelte  Timeline.svelte  Toast.svelte  TrimControls.svelte  UrlInput.svelte  exportRef.svelte.ts  playerRef.svelte.ts  sizeEstimate.ts
src/lib/focus/: coords.ts  interpolate.ts  types.ts
src/stores/: clip.svelte.ts
src/styles/: app.css
