[package]
name = "xclip"
version = "0.1.0"
description = "Paste a video URL, trim, and copy the clip to your clipboard."
authors = ["xclip"]
edition = "2021"

[lib]
name = "xclip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
url = "2"
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
clipboard-win = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
